<resources>
    <string name="app_name">Team_3</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="button">Button</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="transfer">Transfer</string>
    <string name="addmoney">AddMoney</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="current_balance">Current Balance</string>
    <string name="amountadder">Amount</string>
    <string name="transferit">Transfer</string>
    <string name="receiveremail">ReceiverEmail</string>
    <string name="current_balance2">Current Balance</string>
    <string name="sign_out">Sign Out</string>
    <string name="addmoney1">AddMoney</string>
    <string name="add_money">Add_Money</string>
    <string name="transfer1">Transfer</string>
    <string name="paybills">Pay_Bills</string>
    <string name="sure">sure</string>
    <string name="faq">FAQ</string>
    <string name="send">Send</string>
    <string name="todo1">TODO</string>
    <string name="hello">Hello</string>
    <string name="type_a_message2">Type a Message</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type a Message</string>
    <string name="todo2">TODO</string>
    <string name="chat_with_bot">chat with bot</string>
</resources>
